--- a/index.html
+++ b/index.html
@@ -2,17 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Registration Form</title>
+    <title>Dive Center - Membership satisfactory survery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
+<script>
+// Get the video
+  var video = document.getElementById("myVideo");
+
+// Get the button
+var btn = document.getElementById("myBtn");
+
+// Pause and play the video, and change the button text
+function myFunction() {
+  if (video.paused) {
+    video.play();
+    btn.innerHTML = "Pause";
+  } else {
+    video.pause();
+    btn.innerHTML = "Play";
+  }
+}
+</script>
+    <!--<video autoplay muted loop id="myVideo">-->
+      <!--<source src="./Videos/video-2" type="video/mp4">-->
+    <!--</video>-->
+    <!--<button id="myBtn" onclick="myFunction()">Pause</button>-->
+    
     <header>
-      <h1 id="title">I Want to be a Dive Master</h1>
-      <p id="description">Thank you for taking the time to help us improve our Dive Center.</p>
+      <div class="top-header">
+        <p>We can be better than yesterday.</p>
+      </div>
+      <h1 id="title">Membership Satisfactory Survey</h1>
     </header>
     <form id="survey-form">
+      <p id="description">Thank you for taking the time to help us improve our Dive Center:</p>
       <fieldset>
         <label for="name" id="name-label">Name<input id="name" type="text" placeholder="Enter your name" required></label>
         <label for="email" id="email-label">Email<input id="email" type="email" placeholder="Enter your Email" required></label>
